# convorator

./: .gitignore  pyproject.toml  setup.cfg  setup.py  test_model_resolution.py
.github/workflows/: tests.yml
examples/: llm_client_simple_usage.py  simple_example.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
src/convorator/: exceptions.py
src/convorator/client/: anthropic_client.py  gemini_client.py  llm_client.py  openai_client.py  utils.py
src/convorator/conversations/: callbacks.py  configurations.py  conversation_orchestrator.py  conversation_setup.py  events.py  prompts.py  state.py  types.py  utils.py
src/convorator/utils/: logger.py
tests/: conftest.py
tests/client/: test_configuration.py  test_error_handling.py  test_llm_interface.py  test_message_conversation.py  test_openai_client_unit.py  test_token_counting.py
tests/conversations/: test_conversation_orchestrator.py
tests/integration/: test_integration.py  test_mock_api_workflows.py  test_real_api.py
tests/unit/: test_configurations.py  test_gen_conversations.py  test_gen_conversations_helpers.py  test_llm_client.py  test_prompts.py  test_state.py  test_utils.py
