[metadata]
name = llm-conversation-framework
description = A framework for conducting and improving conversations with LLMs
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
extend-ignore = E203
max-complexity = 10